Further updates to how the Virtual Dom works Supports newable Components that do not create custom tags.

--- a/src/layouts/main.html
+++ b/src/layouts/main.html
@@ -32,12 +32,14 @@
                 background-color: white;
                 flex: 1;
                 z-index: 5;
+                display: grid;
+                place-items: center;
             }
         </style>
     </head>
     <body>
         <div id="app">
-            <title-bar><span slot="title">Sample Application</span></title-bar>
+            <title-bar><span slot="title">Vectron</span></title-bar>
             <work-area></work-area>
         </div>
         <script src="./layouts.js"></script>
